[package]
name = "shared-tokio-runtime"
version = "0.1.6"
description = "Shared tokio runtime"
edition = "2021"
license = "MIT"
repository = "https://github.com/victorteokw/shared-tokio-runtime"

[dependencies]
lazy_static = "1.4.0"
tokio = { version = "1.0", features = ["full"] }
shared-tokio-runtime-macros = "0.1.6"